# django_kafka

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  Makefile  README.md  TROUBLESHOOTING_MSK.md  context7.json  requeriments.txt  setup.cfg  setup.py
django_kafka/: __init__.py  admin.py  consumer.py  producer.py
django_kafka/management/commands/: kafka_consumer.py  kafka_setup.py
examples/: consumer.py  params.py  producer.py
vert_kafka/: producer.py
vert_kafka/management/commands/: kafka_consumer.py
