[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE


[flake8]
ignore = E402,Q000, W601, W504, W503, E722, E203
max-line-length = 120
# update groups has be refactor
exclude =
    .git,
    .venv,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    settings_*,
    */migrations/*.py,
    **/update_groups.py,
    **/apps.py,
    model_factories,

# ideal is 6
max-complexity = 10

[isort]
profile = black
multi_line_output = 3
skip = migrations
       settings
       apps.py

[tool.black]
exclude =
    .git,
    .venv,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    settings_*,
    */migrations/*.py,
    **/update_groups.py,
    **/apps.py,
    model_factories,